added 'edit book' REST endpoint (with no cover upload yet)
